--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "@vercel/functions": "^2.0.0",
     "@vercel/speed-insights": "^1.2.0",
     "next": "15.1.7",
     "react": "^19.0.0",
